SYS-528 version refresh - alpine 3.13 has arrived

--- a/ansible/roles/monitoring_agent/handlers/main.yml
+++ b/ansible/roles/monitoring_agent/handlers/main.yml
@@ -11,7 +11,8 @@
     state: restarted
 
 - name: Restart rsyslogd
-  service:
+  systemd:
+    daemon_reload: yes
     name: rsyslog
     state: restarted
 
