--- a/images/python-wsgi/Dockerfile
+++ b/images/python-wsgi/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8.5-alpine3.12
+FROM python:3.8.7-alpine3.13
 
 MAINTAINER Rich Braun "richb@instantlinux.net"
 ARG BUILD_DATE
@@ -10,26 +10,23 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
     org.label-schema.vcs-ref=$VCS_REF \
     org.label-schema.vcs-url=https://github.com/instantlinux/python-wsgi
 ENV PYTHONPATH=/usr/lib/python3.8/site-packages
-ARG CFFI_VERSION=1.14.0-r2
-ARG PYCRYPTOGRAPHY_VERSION=3.2.1-r0
-ARG PYPILLOW_VERSION=7.1.2-r0
-ARG UWSGI_VERSION=2.0.18-r8
+ARG CFFI_VERSION=1.14.4-r0
+ARG PYCRYPTOGRAPHY_VERSION=3.3.2-r0
+ARG PYPILLOW_VERSION=7.2.0-r1
+ARG UWSGI_VERSION=2.0.19.1-r1
 
-COPY requirements.txt uwsgi.ini /usr/src/
-RUN echo '@community http://dl-cdn.alpinelinux.org/alpine/edge/community' \
-      >>/etc/apk/repositories && \
-    echo '@edge http://dl-cdn.alpinelinux.org/alpine/edge/main' \
-      >>/etc/apk/repositories && \
-    apk add --virtual .fetch-deps gcc git jpeg-dev libffi-dev make musl-dev \
+COPY Pipfile* uwsgi.ini /usr/src/
+RUN apk add --virtual .fetch-deps gcc git jpeg-dev libffi-dev make musl-dev \
       libwebp-dev openssl-dev pcre-dev zlib-dev && \
     apk add --update --no-cache geos jpeg libjpeg-turbo libwebp \
-      proj@community py3-boto3 py3-botocore py3-cffi==$CFFI_VERSION \
-      py3-coverage py3-cryptography@edge==$PYCRYPTOGRAPHY_VERSION \
-      py3-pycryptodomex@edge py3-flask py3-itsdangerous py3-jwt \
+      proj py3-boto3 py3-botocore py3-cffi==$CFFI_VERSION \
+      py3-coverage py3-cryptography==$PYCRYPTOGRAPHY_VERSION \
+      py3-pycryptodomex py3-flask py3-flask-babel py3-itsdangerous py3-jwt \
       py3-pillow==$PYPILLOW_VERSION py3-requests py3-setuptools \
       py3-urllib3 py3-virtualenv uwsgi==$UWSGI_VERSION \
       uwsgi-python3 zlib && \
-    pip3 install -r /usr/src/requirements.txt && pip freeze && \
+    pip install pipenv && \
+    cd /usr/src && pipenv install --system --deploy && pip freeze && \
     apk del .fetch-deps && rm -r /var/cache/apk/* /root/.cache
 
 CMD ["uwsgi", "--ini", "/usr/src/uwsgi.ini"]
