--- a/images/nut-upsd/Dockerfile
+++ b/images/nut-upsd/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.12
+FROM alpine:3.13
 MAINTAINER Rich Braun "docker@instantlinux.net"
 ARG BUILD_DATE
 ARG VCS_REF
@@ -8,7 +8,7 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
     org.label-schema.vcs-ref=$VCS_REF \
     org.label-schema.vcs-url=https://github.com/instantlinux/docker-tools
 
-ARG NUT_VERSION=2.7.4-r7
+ARG NUT_VERSION=2.7.4-r8
 ENV API_USER=upsmon \
     DESCRIPTION=UPS \
     DRIVER=usbhid-ups \
@@ -25,10 +25,8 @@ HEALTHCHECK CMD upsc ups@localhost:3493 2>&1|grep -q stale && exit 1 || true
 
 RUN echo '@testing http://dl-cdn.alpinelinux.org/alpine/edge/testing' \
       >>/etc/apk/repositories && \
-    echo '@edge http://dl-cdn.alpinelinux.org/alpine/edge/main' \
-      >>/etc/apk/repositories && \
     apk add --update nut@testing=$NUT_VERSION \
-      libcrypto1.1 libssl1.1 musl@edge net-snmp-libs@edge
+      libcrypto1.1 libssl1.1 musl net-snmp-libs
 
 EXPOSE 3493
 COPY entrypoint.sh /usr/local/bin/
